--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import HorizontalCard from '../components/HorizontalCard.astro';
-import { getCollection } from 'astro:content';
-
-const posts = (await getCollection('blog')).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
-
-const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout sideBarActiveItemID="home">
@@ -17,18 +10,18 @@ const last_posts = posts.slice(0, 3);
     <div class="text-3xl py-3 font-bold">Web Developer</div>
     <div class="py-2">
       <text class="text-lg">
-        I am passionate about building great digital experiences. <br />
-         Coming from a background in actuarial science, I found my passion of
-        building something with code by building complex excel models, VBA
-        macros, and C# functions. business requirements strict timeline
-        translating product requirements into excel models testing to ensure
-        accuracy
+        From actuarial analyst to coding enthusiast - I discovered my passion in
+        coding while writing Excel macros, Windows batch scripts, and custom C#
+        spreadsheet functions.
       </text>
     </div>
   </div>
 
-  <div>
-    <div class="text-3xl w-full font-bold mb-2">My projects</div>
+  <div class="flex">
+    <div class="text-3xl w-full font-bold mb-2">Project Highlights</div>
+    <a href="/projects" class="hidden md:flex text-xl btn btn-accent"
+      >View All</a
+    >
   </div>
 
   <HorizontalCard
@@ -46,4 +39,8 @@ const last_posts = posts.slice(0, 3);
     url="#"
   />
   <div class="divider my-0"></div>
+
+  <div class="flex justify-center mt-2 md:hidden">
+    <a href="/projects" class="text-xl btn btn-wide btn-accent">All Projects</a>
+  </div>
 </BaseLayout>
