Add todo app project post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,18 +25,12 @@ import HorizontalCard from '../components/HorizontalCard.astro';
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="NEW"
-  />
-  <div class="divider my-0"></div>
-  <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    title="Todo App"
+    img="/todoApp.jpeg"
+    desc="A simple todo app with email link and Google login, and optimistic updates."
+    url="/projects/todoapp"
+    target="_self"
+    badge="Demo"
   />
   <div class="divider my-0"></div>
 
