--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,16 +1,16 @@
 ---
-import { BlogSchema } from "../content/config";
-import BaseLayout from "./BaseLayout.astro";
-import dayjs from "dayjs";
-import localizedFormat from "dayjs/plugin/localizedFormat";
+import { ProjectSchema } from '../content/config';
+import BaseLayout from './BaseLayout.astro';
+import dayjs from 'dayjs';
+import localizedFormat from 'dayjs/plugin/localizedFormat';
 
-export interface Props extends BlogSchema {}
+export interface Props extends ProjectSchema {}
 
 const { title, description, pubDate, updatedDate, heroImage, badge } =
   Astro.props;
 dayjs.extend(localizedFormat);
-const displayDate = dayjs(pubDate).format("ll");
-import { Image } from "@astrojs/image/components";
+const displayDate = dayjs(pubDate).format('ll');
+import { Image } from '@astrojs/image/components';
 ---
 
 <BaseLayout title={title} description={description} image={heroImage}>
@@ -18,8 +18,8 @@ import { Image } from "@astrojs/image/components";
     <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
       {
         heroImage && (
-        <Image
-            aspectRatio={"16:9"}
+          <Image
+            aspectRatio={'16:9'}
             width={750}
             height={422}
             format="webp"
@@ -36,8 +36,8 @@ import { Image } from "@astrojs/image/components";
       {
         updatedDate && (
           <div>
-            {" "}
-            Last updated on <time>{updatedDate}</time>{" "}
+            {' '}
+            Last updated on <time>{updatedDate}</time>{' '}
           </div>
         )
       }
