--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -4,9 +4,9 @@ import HorizontalCard from '../../components/HorizontalCard.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths({ paginate }) {
-  const posts = await getCollection('blog');
-  posts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-  return paginate(posts, { pageSize: 10 });
+  const project = await getCollection('projects');
+  project.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+  return paginate(project, { pageSize: 10 });
 }
 
 const { page } = Astro.props;
