--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,30 +1,32 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
-import { BlogSchema } from '../../content/config';
+import { ProjectSchema } from '../../content/config';
 import PostLayout from '../../layouts/PostLayout.astro';
 
 export async function getStaticPaths() {
-    const postEntries = await getCollection('blog');
-    return postEntries.map(entry => ( { 
-        params: { slug: entry.slug }, props: { entry },
-    } ));
+  const postEntries = await getCollection('projects');
+  return postEntries.map((entry) => ({
+    params: { slug: entry.slug },
+    props: { entry },
+  }));
 }
 
 interface Props {
-    entry: CollectionEntry<"blog">;
+  entry: CollectionEntry<'projects'>;
 }
 
 const { entry } = Astro.props;
-const post : BlogSchema = entry.data;
+const post: ProjectSchema = entry.data;
 const { Content } = await entry.render();
 ---
 
-<PostLayout 
-    title={post.title} 
-    description={post.description} 
-    pubDate={post.pubDate} 
-    heroImage={post.heroImage} 
-    updatedDate={post.updatedDate} 
-    badge={post.badge}>
-    <Content/>
+<PostLayout
+  title={post.title}
+  description={post.description}
+  pubDate={post.pubDate}
+  heroImage={post.heroImage}
+  updatedDate={post.updatedDate}
+  badge={post.badge}
+>
+  <Content />
 </PostLayout>
