Fix footer Linkedin link

--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -28,7 +28,7 @@
   </a>
 
   <a
-    href="https://www.linkedin.com/in/vincentchuckjs"
+    href="https://www.linkedin.com/in/vincent-chuck-js/"
     target="_blank"
     class="mx-3"
     aria-label="Linkedin"
@@ -48,7 +48,6 @@
 
   <a
     href="mailto:vincentchuckjs@gmail.com"
-    target="_blank"
     class="mx-3"
     aria-label="Email me"
     title="Email me"
