Add Rainforest Books project post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,12 +25,22 @@ import HorizontalCard from '../components/HorizontalCard.astro';
   </div>
 
   <HorizontalCard
+    title="Rainforest Books"
+    img="/rainforestBooks/rainforestBooks.png"
+    desc="Full stack Amazon clone."
+    url="/projects/rainforestbooks"
+    target="_self"
+    badge="Live Demo"
+  />
+  <div class="divider my-0"></div>
+
+  <HorizontalCard
     title="Todo App"
-    img="/todoApp.jpeg"
+    img="/todoApp/todoApp.jpeg"
     desc="A simple todo app with email link and Google login, and optimistic updates."
     url="/projects/todoapp"
     target="_self"
-    badge="Demo"
+    badge="Live Demo"
   />
   <div class="divider my-0"></div>
 
