Update about page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,9 @@ import HorizontalCard from '../components/HorizontalCard.astro';
         From actuarial analyst to coding enthusiast - I discovered my passion in
         coding while writing Excel macros, Windows batch scripts, and custom C#
         spreadsheet functions.
+        <br />
+        <br />
+         I now strive to deliver great digital experiences to the users.
       </text>
     </div>
   </div>
