--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,6 +1,7 @@
 ---
-const { title, img, desc, url, badge, tags, target = "_blank" } = Astro.props;
-import { Image } from "@astrojs/image/components";
+const { title, img, desc, url, badge, tags, target = '_blank' } = Astro.props;
+import { Image } from '@astrojs/image/components';
+import Badge from './Badge.astro';
 ---
 
 <div
@@ -23,7 +24,7 @@ import { Image } from "@astrojs/image/components";
       <div class="grow w-full">
         <h1 class="text-xl font-bold">
           {title}
-          {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
+          {badge && <Badge badge={badge} classAdd="mx-2" />}
         </h1>
         <p class="py-1 text-1xl">{desc}</p>
         <div class="card-actions justify-end">
