--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,6 +1,7 @@
 ---
 import { ProjectSchema } from '../content/config';
 import BaseLayout from './BaseLayout.astro';
+import Badge from '../components/Badge.astro';
 import dayjs from 'dayjs';
 import localizedFormat from 'dayjs/plugin/localizedFormat';
 
@@ -32,7 +33,7 @@ import { Image } from '@astrojs/image/components';
       <h1 class="title my-2 text-4xl font-bold">{title}</h1>
       {pubDate && <time>{displayDate}</time>}
       <br />
-      {badge && <div class="badge badge-secondary my-1">{badge}</div>}
+      {badge && <Badge badge={badge} classAdd="my-1" />}
       {
         updatedDate && (
           <div>
