Minor edits for about page and projects posts

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,9 +35,7 @@ import TimeLineElement from '../components/about/TimeLine.astro';
       title="Bsc in Actuarial Science (First Class Honours)"
       subtitle="2016 - 2019 | London School of Economics and Political Science, London, United Kingdom"
     >
-      <div>
-        Studied actuarial mathematics, statistics, economics, and finance.
-      </div>
+      <div>Studied mathematics, statistics, economics, and finance.</div>
     </TimeLineElement>
   </div>
 
@@ -56,8 +54,9 @@ import TimeLineElement from '../components/about/TimeLine.astro';
           business requirements e.g. new products or product revisions.
         </li>
         <li>
-          Wrote C# functions for our pricing model on a new platform and ensured
-          consistency between the new and existing Excel model.
+          Wrote C# functions while migrating a pricing model onto a new
+          platform, and ensured consistency between the new model and the
+          existing Excel model.
         </li>
         <li>
           Drafted requirement documents and facilitated user acceptance testing
