--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ import HorizontalCard from '../components/HorizontalCard.astro';
     desc="Full stack Amazon clone."
     url="/projects/rainforestbooks"
     target="_self"
+    badge="Live Demo"
   />
   <div class="divider my-0"></div>
 
